turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:48: error: ')' expected but ';' found.
  rule=Array( Array( Array(1,RIGHT,0),Array(1,LEFT,1);Array(0,NOTURN,0),Array(0,NOTURN,1)))) 
                                                     ^Turmite:48: error: ';' expected but ',' found.
  rule=Array( Array( Array(1,RIGHT,0),Array(1,LEFT,1);Array(0,NOTURN,0),Array(0,NOTURN,1)))) 
                                                                       ^